--- a/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
@@ -1863,11 +1863,17 @@ msgid ""
 "There are no active premium account.\n"
 "Using a limited version that may not work properly with congested links."
 msgstr ""
+"Nie ma aktywnego konta premium.\n"
+"Korzystanie z ograniczonej wersji, która może nie działać poprawnie z "
+"przeciążonymi liniami."
 
 msgid ""
 "There is a new version available do you want to update? \n"
 "Your version [%s], latest version on server [%s]."
 msgstr ""
+"Dostępna jest nowa wersja, chcesz aktualizować?\n"
+"Twoja wersja [%s]\n"
+"Najnowsza wersja na serwerze [%s]."
 
 msgid "There are no other favourite groups"
 msgstr ""
